modules/dt.init.less
/* ... */
// Don't re-color :visited links that act as buttons (T319019)
.ext-discussiontools-init-replylink-reply,
.ext-discussiontools-init-section-subscribe-link {
	&:visited {
		color: @color-link;
	}
}

.ext-discussiontools-init-timestamplink {
	&,
	&:visited,
	&:active {
		color: @color-placeholder;
	}
}

.ext-discussiontools-init-noMarker {
	list-style: none;
}

.ext-discussiontools-init-highlight {
	position: absolute;
	pointer-events: none;
	opacity: 0;
	mix-blend-mode: darken;
	// Support: Safari
	// Safari doesn't blend this overlay with the text unless GPU rendering is forced.
	transform: translateZ( 0 );
}

.ext-discussiontools-init-highlight-fadein {
	opacity: 1;
}

.ext-discussiontools-init-highlight-fadeout {
	opacity: 0;
	transition: opacity 250ms ease-out;
}

.ext-discussiontools-init-publishedcomment {
	background-color: #ffe29e;
}

.ext-discussiontools-init-targetcomment {
	// Same color as the :target selector for references (from Cite).
	// Not sure if that's a good idea, but it should be different from -publishedcomment.
	background-color: #eaf3ff;
}

// Topic subscriptions (both kinds)
/* stylelint-disable selector-max-id, selector-class-pattern */
#ca-dt-page-subscribe,
.menu__item--page-actions-overflow-t-page-subscribe,
.ext-discussiontools-init-section-subscribe,
.ext-discussiontools-init-section-subscribeButton {
	// If JS is enabled, disable the buttons until it's loaded, so that users don't accidentally
	// navigate to the no-JS interface.
	// TODO: These clicks will be ignored, but ideally we would process them once ready (T183720).
	.client-js:not( .ext-discussiontools-init-ready ) & {
		pointer-events: none;
	}
}
/* stylelint-enable selector-max-id, selector-class-pattern */

.ext-discussiontools-visualenhancements-enabled .ext-discussiontools-init-section {
	// Introduce a block formatting context so that floated "subscribe" links/buttons
	// aren't affected by other floats (T327469). Most skins already include this rule
	// for headings, but we add the floating stuff outside of headings (since T314714).
	// https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Block_formatting_context
	overflow: hidden;
	// Prevent squishing too much (T335823)
	min-width: 20em;

	.mw-mf& {
		// Prevent the overflow menu's focus ring from being clipped.
		// We have no floated links/buttons on mobile, so this is okay.
		overflow: visible;
	}
}

// Topic subscriptions (link)
.ext-discussiontools-init-section-subscribe {
	display: none;

	.ext-discussiontools-topicsubscription-enabled & {
		display: block;
	}

	// Directional properties must be based on content direction.
	.mw-content-ltr &,
	.mw-content-rtl .mw-content-ltr & {
		/* @noflip */
		float: right;
	}

	.mw-content-rtl &,
	.mw-content-ltr .mw-content-rtl & {
		/* @noflip */
		float: left;
	}

	&.mw-editsection-like {
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
		user-select: none;
		margin-top: 0.6em;
		// Restore line height after Ie2ef68f3d0d
		line-height: inherit;
	}

	.mw-mf & {
		// Subscribe button is used instead on mobile
		display: none;
	}

	// Similar to mw-editsection-bracket
	&-bracket {
		color: @color-subtle;

		.mw-content-ltr &:first-child,
		.mw-content-rtl .mw-content-ltr &:first-child,
		.mw-content-rtl &:last-child,
		.mw-content-ltr .mw-content-rtl &:last-child {
			/* @noflip */
			margin-right: 0.25em;
		}

		.mw-content-ltr &:last-child,
		.mw-content-rtl .mw-content-ltr &:last-child,
		.mw-content-rtl &:first-child,
		.mw-content-ltr .mw-content-rtl &:first-child {
			/* @noflip */
			margin-left: 0.25em;
		}
	}

	&-link&-link-pending {
		color: #72777d;
		pointer-events: none;
	}

	@media print {
		// stylelint-disable-next-line declaration-no-important
		display: none !important;
	}
}

// Topic subscriptions (button)
// Boost specificity by adding .oo-ui-buttonElement
.ext-discussiontools-init-section-subscribeButton.oo-ui-buttonElement {
	display: none;

	> .oo-ui-buttonElement-button {
		font-weight: normal;
	}

	.ext-discussiontools-topicsubscription-enabled.ext-discussiontools-visualenhancements-enabled & {
		display: inline-block;
	}

	// Directional properties must be based on content direction.
	body:not( .mw-mf ) .mw-content-ltr &,
	body:not( .mw-mf ) .mw-content-rtl .mw-content-ltr & {
		/* @noflip */
		float: right;
		/* @noflip */
		// stylelint-disable-next-line declaration-no-important
		margin: -2px 0 0 1em !important;
	}

	body:not( .mw-mf ) .mw-content-rtl &,
	body:not( .mw-mf ) .mw-content-ltr .mw-content-rtl & {
		/* @noflip */
		float: left;
		/* @noflip */
		// stylelint-disable-next-line declaration-no-important
		margin: -2px 1em 0 0 !important;
	}

	@media print {
		// stylelint-disable-next-line declaration-no-important
		display: none !important;
	}
}

// Visual enhancements disabled
.ext-discussiontools-init-section-bar,
.ext-discussiontools-init-replybutton.oo-ui-buttonElement,
.ext-discussiontools-init-pageframe-latestcomment,
.ext-discussiontools-init-sidebar-meta {
	display: none;
}

.ext-discussiontools-init-pageframe-latestcomment {
	color: @color-subtle;
}
/* ... */

